# propagate

./: .clang-format  .clangd  README.md  meson.build
include/siga/: propagate.hpp
include/siga/propagate/: macro.hpp  try_traits.hpp
include/siga/propagate/detail/: deducer.hpp  string_literal.hpp  ubiq.hpp
include/siga/propagate/try_traits/: expected.hpp  optional.hpp  try_traits.hpp
test/: deducer.cpp  macro.cpp  optional.cpp  ubiq.cpp
